force-app/main/default/objects/LVC_OrderQuantityDate__c/LVC_OrderQuantityDate__c.object-meta.xml
<CustomObject>
    <label>Cantidad del Pedido Fecha</label>
    <nameField>
        <displayFormat>CANT-{0000000000}</displayFormat>
        <label>Cantidad del Pedido Fecha</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cantidades del Pedido Fecha</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>