force-app/main/default/objects/LVC_OrderQuantityDate__c/fields/ConsumedOrdersQuantity__c.field-meta.xml
<CustomField>
    <fullName>ConsumedOrdersQuantity__c</fullName>
    <label>Cantidad de Pedidos Consumidos</label>
    <summaryFilterItems>
        <field>LVC_Order__c.Status__c</field>
        <operation>equals</operation>
        <value>Confirmado</value>
    </summaryFilterItems>
    <summaryForeignKey>LVC_Order__c.OrderQuantityDate__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>