force-app/main/default/objects/LVC_OrderQuantityDate__c/fields/Delivery__c.field-meta.xml
<CustomField>
    <fullName>Delivery__c</fullName>
    <label>Fletero Id</label>
    <referenceTo>LVC_Delivery__c</referenceTo>
    <relationshipLabel>Cantidades del Pedido Fecha</relationshipLabel>
    <relationshipName>OrderQuantitiesDate</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>