force-app/main/default/objects/LVC_OrderQuantityDate__c/fields/RecordToDelete__c.field-meta.xml
<CustomField>
    <fullName>RecordToDelete__c</fullName>
    <description>Used in LVC_DeleteOrderQuantities Flow, this checks if the record is older than the current date</description>
    <formula>Date__c &lt; TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RecordToDelete</label>
    <type>Checkbox</type>
</CustomField>